# YouTube-Comment-Insights-Analyzer

./: .gitignore  .replit  README.md  clean_repo.py  comment_analysis.py  create_github_repo.py  download_dataset.py  git_info.py  main.py  openai_api.py  push_code_to_github.py  pyproject.toml  replit.nix  youtube_api.py
.kaggle/: kaggle.json
dataset/: Details _ comments YouTube video.xlsx
static/: script.js
static/css/: style.css
static/js/: script.js
templates/: index.html
