[tool.poetry]
name = "repl-nix-youtube-comment-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.47.0"
flask = "^3.0.3"
google-api-python-client = "^2.146.0"
kaggle = "^1.6.17"
pandas = "^2.2.3"
plotly = "^5.24.1"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
textblob = "^0.18.0.post0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
